# tiktok-mcp-service

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: dependency-management.mdc  high-level-checks.mdc  purpose-of-service.mdc  third-party-library-documentation.mdc
scripts/: clean.sh
tiktok_mcp_discovery/: anti_detection.py  main.py  prompts.py  requests.py  response_processor.py  session.py  tiktok_client.py
tiktok_mcp_discovery/models/: __init__.py  hashtag.py  user.py  video.py
tiktok_mcp_discovery/tests/: conftest.py  pytest.ini  test_anti_detection.py  test_client.py  test_client_basic.py  test_health.py  test_integration.py  test_requests.py  test_response_processor.py  test_server.py  test_session.py
tiktok_mcp_service/: main.py  server.py  test_interaction.py  test_server.py  tiktok_client.py
tiktok_mcp_service/tests/: test_client.py  test_health.py  test_integration.py  test_server.py
