[tool.poetry]
name = "tiktok-mcp-service"
version = "0.1.0"
description = "TikTok Model Context Protocol Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tiktok_mcp_service"}]

[tool.poetry.dependencies]
python = "^3.10"
TikTokApi = "^7.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.0"
mcp = {version = "^1.6.0", extras = ["cli"]}
backoff = "^2.2.1"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 